Remove XOM dependency due to security issues
Xom was used for a version 3 compatibility mode that no longer is needed. It has vulnerable dependencies on old Xalan & Xerces versions.

Added Lucene dependency for upcoming index & search features